RESOLVED FIXED145749
Subpixel rendering: Clip-path does not work properly on subpixel positions.
https://bugs.webkit.org/show_bug.cgi?id=145749
Summary Subpixel rendering: Clip-path does not work properly on subpixel positions.
alan
Reported 2015-06-07 19:18:11 PDT
When clip-path is present and the content is subpixel positioned, the clipping is not correct.
Attachments
Patch (7.60 KB, patch)
2015-06-07 19:29 PDT, alan
no flags
Patch (9.62 KB, patch)
2015-06-08 13:16 PDT, alan
no flags
Patch (9.69 KB, patch)
2015-06-08 14:27 PDT, alan
no flags
alan
Comment 1 2015-06-07 19:29:39 PDT
alan
Comment 2 2015-06-08 09:42:29 PDT
Simon Fraser (smfr)
Comment 3 2015-06-08 09:56:33 PDT
Comment on attachment 254466 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=254466&action=review > Source/WebCore/rendering/RenderLayer.cpp:4087 > + Path path = computeClipPath(paintingOffsetFromRoot, rootRelativeBounds, windRule); Doesn't rootRelativeBounds need to be snapped?
alan
Comment 4 2015-06-08 13:16:07 PDT
alan
Comment 5 2015-06-08 14:27:10 PDT
WebKit Commit Bot
Comment 6 2015-06-08 17:29:44 PDT
Comment on attachment 254508 [details] Patch Clearing flags on attachment: 254508 Committed r185343: <http://trac.webkit.org/changeset/185343>
WebKit Commit Bot
Comment 7 2015-06-08 17:29:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.