Subpixel rendering: Clip-path does not work properly on subpixel positions. https://bugs.webkit.org/show_bug.cgi?id=145749 rdar://problem/20824305

Reviewed by Simon Fraser.

This patch ensures that clip-path is device pixel snapped both for composited and
non-composited content.

Source/WebCore:

Tests: compositing/masks/compositing-clip-path-on-subpixel-position.html
       fast/masking/clip-path-on-subpixel-position.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::setupClipPath):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateMaskingLayerGeometry):

LayoutTests:

* compositing/masks/compositing-clip-path-on-subpixel-position-expected.html: Added.
* compositing/masks/compositing-clip-path-on-subpixel-position.html: Added.
* fast/masking/clip-path-on-subpixel-position-expected.html: Added.
* fast/masking/clip-path-on-subpixel-position.html: Added.


Canonical link: https://commits.webkit.org/163822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185343 268f45cc-cd09-0410-ab3c-d52691b4dbfc